completed e-04-great-lakes-datawrangling and solutions

--- a/exercises/e-04-great-lakes-datawrangling/great-lakes-datawrangling.Rmd
+++ b/exercises/e-04-great-lakes-datawrangling/great-lakes-datawrangling.Rmd
@@ -35,6 +35,8 @@ A definition of all variables is given in the [Data dictionary] section at the e
 skim(fishing)
 ```
 
+**Note:** Remember you can also use `glimpse()` to take a look at a dataset.
+
 ### Exercise 2.
 
 Which species and years are associated with the largest total U.S fish catches from Lake Michigan?
@@ -59,9 +61,18 @@ fishing %>%
       )
 ```
 
+**Tip:** If you are working with a large dataset like `fishing`, and there are character class variables (e.g., \`region\`\`), you can quickly see what different character strings (regions) are in the dataset by converting the characters to factors (i.e. categorical data), then looking at the levels.
+Here's some code to try:
+
+```{r region-levels}
+levels( factor( fishing$region ) )
+```
+
 ### Exercise 3.
 
 How many very large (at least 10,000,000 lbs) fish catches were there before 1950, and which species were they catching in such large quantities?
+
+**Note:** The `values` data are reported to the nearest whole 1,000 lbs, so add 3 zeros to any number in the `values` column.
 
 In the following chunk, replace
 
@@ -80,14 +91,25 @@ fishing %>%
 levels(factor(fishing$species))
 ```
 
+From here on, we'll continue only using catch data from the "U.S. Total" `region`.
+To avoid having to filter each time, let's create a new dataframe `fishing_us` from `fishing` that only includes the data we want:
+
+```{r ustotal-dataframe}
+fishing_us <- fishing %>% 
+  filter(
+    region == "U.S. Total"
+  )
+```
+
 ### Exercise 4.
 
-Do you think more fishes are caught in Lake Michigan now, compared to 1975?
+Do you think annual U.S. fish catches are larger in Lake Michigan now, compared to 1975?
 
 Test your intuition with data...
 
 Using `filter()` determine the largest total U.S. catches from Lake Michigan in the years 2015 and 1975.
 Simplify your output by using `select()` to select only `year`, `species`, and `values`.
+Although we normally tidy up data by pivoting longer, as a final step, use `pivot_wider()` to allow you to compare the catch in 1975 with that in 2015 in a single row.
 
 ```{r 1975-comparison}
 # add code here
@@ -98,22 +120,10 @@ Was your intuition correct?
 
 ### Exercise 5.
 
-`Pacific Salmon` were introduced to the Great Lakes to reduce the large `Alewife` populations during the second half of the 20th century.
-Which year after 1975 did the total U.S. catch of `Alewife` drop below 10,000,000 lbs?
+Pacific Salmon species started being stocked in the Great lakes during the 1970s, for commercial fishing and to reduce the large `Alewife` populations.
+Calculate summary statistics (minimum, mean, median, maximum) for the size of the `Chinook Salmon` catch in Lake Michigan over all available years of data.
 
-Using `filter()` determine the size of U.S. total catches of Alewife from Lake Michigan after 1975 that were less than 10,000,000 lbs, then use `arrange()` to identify the earliest year.
-
-```{r latest-year}
-# add code here
-# pay attention to correctness and code style
-```
-
-### Exercise 5.
-
-Create a frequency table of the number of `adults` in a booking.
-Display the results in descending order so the most common observation is on top.
-What is the most common number of adults in bookings in this dataset?
-Are there any surprising results?
+**Hint:** In addition to the functions you've used up til now, you'll need to use the `summarize()` function.
 
 **Note:** Don't forget to label your R chunk as well (where it says `label-me-1`).
 Your label should be short, informative, and shouldn't include spaces.
@@ -124,12 +134,15 @@ It also shouldn't repeat a previous label, otherwise R Markdown will give you an
 # pay attention to correctness and code style
 ```
 
+Look at the median value.
+Why could we have predicted the median value without doing the median calculation?
+Think about the number of years in the dataset...
+
 ### Exercise 6.
 
-Repeat Exercise 5, once for canceled bookings (`is_canceled` coded as 1) and once for not canceled bookings (`is_canceled` coded as 0).
-What does this reveal about the surprising results you spotted in the previous exercise?
+Use the maximum catch result you got in the last exercise to identify the `year` the largest `Chinook Salmon` catch was made in Lake Michigan.
 
-**Note:** Don't forget to label your R chunk as well (where it says `label-me-2`).
+Remember to label the chunk again.
 
 ```{r label-me-2}
 # add code here
@@ -138,8 +151,14 @@ What does this reveal about the surprising results you spotted in the previous e
 
 ### Exercise 7.
 
-Calculate minimum, mean, median, and maximum average daily rate (`adr`) grouped by `hotel` type so that you can get these statistics separately for resort and city hotels.
-Which type of hotel is higher, on average?
+In the 1980s, invasive mussel species were introduced to the Great Lakes, likely via ballast water discharges into the Lakes from large vessels.
+The mussels went on to radically change the ecology of the Lakes, including causing a collapse in the Great Lakes fisheries.
+Sum the total Lake Michigan catch (including all species) in the years 1975, 1985, 1995, 2005, and 2015.
+
+**Hint:** You can filter using a vector of numbers (e.g., c(1, 2, 3, 4)), rather than a single number using `%in%` where you would normally put the logical operator (e.g., `==`).
+
+What does the trend show?
+During which 10 year period was the largest change in fish catch?
 
 ```{r label-me-3}
 # add code here
@@ -148,16 +167,49 @@ Which type of hotel is higher, on average?
 
 ### Exercise 8.
 
-We observe two unusual values in the summary statistics above -- a negative minimum, and a very high maximum).
-What types of hotels are these?
-Locate these observations in the dataset and find out the arrival date (year and month) as well as how many people (adults, children, and babies) stayed in the room.
-You can investigate the data in the viewer to locate these values, but preferably you should identify them in a reproducible way with some code.
+Repeat the same exercise, but do not filter the data for Lake Michigan.
+Instead, calculate the total catch for each of the Great Lakes in the dataset.
+To make the trend more readable in table format, use `pivot_wider()` in the last step of your code.
 
-**Hint:** For example, you can `filter` for the given `adr` amounts and `select` the relevant columns.
+Are the trends the same for all the Great Lakes?
 
 ```{r label-me-4}
 # add code here
 # pay attention to correctness and code style
+
+fishing_us %>% 
+  filter(
+    year %in% c(1975, 1985, 1995, 2005, 2015)
+  ) %>% 
+  group_by(lake, year) %>% 
+  summarize(total_catch = sum(values, na.rm = TRUE)) %>% 
+  pivot_wider(
+    names_from = "lake",
+    values_from = "total_catch"
+  )
+
+```
+
+### Exercise 9.
+
+We are currently only looking at total U.S. catch, however, a large part of Lake Superior and Lake Erie are in Canada.
+Repeat the calculation from the previous exercise, but this time, use the original dataset `fishing` and filter for both the `U.S. Total` and `Total Canada (ONT)`.
+What changes appear in the results, now that data from Ontario, Canada, are included?
+
+```{r label-me-5}
+# add code here
+# pay attention to correctness and code style
+```
+
+### Exercise 10.
+
+**Wrap up** Look closely at the different character strings used in the `species` data column by running the code chunk below.
+Do you think this dataset could be cleaned up more?
+
+**Note:** You will need to set `eval=TRUE` when you have an answer you want to try out.
+
+```{r eval=FALSE}
+levels( factor( fishing$species ) )
 ```
 
 ## Data dictionary
