--- a/labs/lab-02-plastic-waste/lab-02-plastic-waste.Rmd
+++ b/labs/lab-02-plastic-waste/lab-02-plastic-waste.Rmd
@@ -26,19 +26,17 @@ Additionally, National Geographic ran a data visualization communication contest
 
 # Getting started
 
-Go to the course GitHub organization and locate your assignment repo, which should be named `lab-02-plastic-waste-YOUR_GITHUB_USERNAME`.
-If you're in the right place, it should look like the following.
+If you're looking at this RMarkdown document in RStudio, then you've already cloned your Unit 2 repo from Github.
+Good job!
 
-```{r echo=FALSE, eval=TRUE}
-knitr::include_graphics("img/repo-begin.png")
-```
+As a brief reminder of the steps:
 
-Grab the URL of the repo, and clone it in RStudio.
-Refer to [HW 00](https://ids-s1-20.github.io/homework/hw-00/hw-00-pet-names.html) if you would like to see step-by-step instructions for cloning a repo into an RStudio project.
-
-First, open the R Markdown document `lab-02.Rmd` and Knit it.
-Make sure it compiles without errors.
-The output will be in the file markdown `.md` file with the same name.
+-   Go to the course GitHub organization and look for your course materials repo, which should be named `unit-X-yourlastname`.
+-   Copy the URL of the repo using the green `Code` button, and copy/clone it into a `New Project from a GitHub Repo` in RStudio Cloud.
+-   Navigate to the exercise, lab, or homework folder using the `File Directory` pane.
+-   Open the R Markdown document `e/lab/hw.Rmd` and Knit it.
+-   Make sure it compiles without errors.
+-   The RMarkdown output will typically be in an `.html` file with the same name.
 
 ## Packages
 
@@ -52,13 +50,17 @@ library(tidyverse)
 ## Data
 
 The dataset for this assignment can be found as a csv file in the `data` folder of your repository.
-You can read it in using the following.
+You can read it in using the following code.
 
 ```{r load-data, message=FALSE, eval=TRUE}
 plastic_waste <- read_csv("data/plastic-waste.csv")
 ```
 
 The variable descriptions are as follows:
+
+```{marginfigure}
+**Hint:** "Per capita" just means "per person"
+```
 
 -   `code`: 3 Letter country code
 -   `entity`: Country name
@@ -84,7 +86,7 @@ The variable descriptions are as follows:
 
 # Exercises
 
-Let's start by taking a look at the distribution of plastic waste per capita in 2010.
+Let's start by taking a look at the *data distribution of plastic waste per capita* in 2010 using `geom_histogram()`.
 
 ```{r plastic_waste_per_cap-hist, eval=TRUE}
 ggplot(data = plastic_waste, aes(x = plastic_waste_per_cap)) +
@@ -92,7 +94,7 @@ ggplot(data = plastic_waste, aes(x = plastic_waste_per_cap)) +
 ```
 
 One country stands out as an unusual observation at the top of the distribution.
-One way of identifying this country is to filter the data for countries where plastic waste per capita is greater than 3.5 kg/person.
+One way of identifying this country is to filter the data for countries where plastic waste per capita **is greater than 3.5 kg/person.**
 
 ```{r plastic_waste_per_cap-max, eval=TRUE}
 plastic_waste %>%
@@ -104,9 +106,18 @@ You might consider doing some research on Trinidad and Tobago to see why plastic
 
 1.  Plot, using histograms, the distribution of plastic waste per capita faceted by continent. What can you say about how the continents compare to each other in terms of their plastic waste per capita?
 
-```{marginfigure}
-**NOTE:** From this point onwards the plots and the output of the code are not displayed in the lab instructions, but you can and should the code and view the results yourself.
+```{r add-your-chunk-label}
+# add your code here, refer to the earlier code chunks for help
+# remember, add facet_grid(___) or facet_wrap(___) after your geom_ line, using + and moving to a new line
 ```
+
+```{marginfigure}
+**NOTE:** From this point onwards the plots and the output of the code are not displayed in the lab instructions, but you should add and complete code chunks and view the results yourself.
+```
+
+🧶 ✅ ⬆️ *Now is a good time to knit your document and commit and push your changes to GitHub with an appropriate commit message (e.g., "Completed Exercise 1"). Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
+
+--
 
 Another way of visualizing numerical data is using density plots.
 
