--- a/labs/lab-02-plastic-waste/lab-02-plastic-waste.Rmd
+++ b/labs/lab-02-plastic-waste/lab-02-plastic-waste.Rmd
@@ -104,20 +104,16 @@ plastic_waste %>%
 Did you expect this result?
 You might consider doing some research on Trinidad and Tobago to see why plastic waste per capita is so high there, or whether this is a data error.
 
-1.  Plot, using histograms, the distribution of plastic waste per capita faceted by continent. What can you say about how the continents compare to each other in terms of their plastic waste per capita?
+1.  Plot, using histograms, the distribution of plastic waste per capita faceted by continent. *What can you say about how the continents compare to each other in terms of their plastic waste per capita?*
 
-```{r add-your-chunk-label}
-# add your code here, refer to the earlier code chunks for help
-# remember, add facet_grid(___) or facet_wrap(___) after your geom_ line, using + and moving to a new line
-```
-
-```{marginfigure}
-**NOTE:** From this point onwards the plots and the output of the code are not displayed in the lab instructions, but you should add and complete code chunks and view the results yourself.
-```
+Open your `lab-02.Rmd` starter file and complete the first exercise.
 
 🧶 ✅ ⬆️ *Now is a good time to knit your document and commit and push your changes to GitHub with an appropriate commit message (e.g., "Completed Exercise 1"). Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
 --
+
+**NOTE:** From this point onwards the plots and the output of the code are not displayed in the Lab instructions, but you should run the code chunks in your RMarkdown file yourself to see the output.
+Then, for the exercises, create new code chunks, write the code yourself, and view the output.
 
 Another way of visualizing numerical data is using density plots.
 
