--- a/labs/lab-02-plastic-waste/lab-02-plastic-waste.Rmd
+++ b/labs/lab-02-plastic-waste/lab-02-plastic-waste.Rmd
@@ -104,18 +104,21 @@ plastic_waste %>%
 Did you expect this result?
 You might consider doing some research on Trinidad and Tobago to see why plastic waste per capita is so high there, or whether this is a data error.
 
-1.  Plot, using histograms, the distribution of plastic waste per capita faceted by continent. *What can you say about how the continents compare to each other in terms of their plastic waste per capita?*
+1.  Plot, using **histograms**, the distribution of plastic waste per capita faceted by continent. *What can you say about how the continents compare to each other in terms of their plastic waste per capita?*
 
 Open your `lab-02.Rmd` starter file and complete the first exercise.
 
-🧶 ✅ ⬆️ *Now is a good time to knit your document and commit and push your changes to GitHub with an appropriate commit message (e.g., "Completed Exercise 1"). Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
+**Note**: we have provided code chunk labels for you for all eight exercises of this Lab (e.g., `{r chunk-label}`).
+However, when you write new code chunks from scratch, remember to include a code chunk label!
+
+🧶 ✅ ⬆️ *Now is a good time to knit your document and commit and push your changes to GitHub with an appropriate commit message (e.g., "Completed Exercise 1").*
 
 --
 
 **NOTE:** From this point onwards the plots and the output of the code are not displayed in the Lab instructions, but you should run the code chunks in your RMarkdown file yourself to see the output.
 Then, for the exercises, create new code chunks, write the code yourself, and view the output.
 
-Another way of visualizing numerical data is using density plots.
+Another way of visualizing numerical data is using **density plots**.
 
 ```{r plastic_waste_per_cap-dens}
 ggplot(data = plastic_waste, aes(x = plastic_waste_per_cap)) +
@@ -160,9 +163,13 @@ This still doesn't look great...
 
 2.  Describe why we defined the `color` and `fill` of the curves by mapping aesthetics of the plot but we defined the `alpha` level as a characteristic of the plotting geom.
 
-🧶 ✅ ⬆️ *Now is a good time to knit your document and commit and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
+Again, navigate your `lab-02.Rmd` starter file and complete the second and third exercises.
 
-And yet another way to visualize this relationship is using side-by-side box plots.
+🧶 ✅ ⬆️ *Now is a good time to knit your document and commit and push your changes to GitHub with an appropriate commit message.*
+
+--
+
+And yet another way to visualize this relationship is using side-by-side **box plots**.
 
 ```{r plastic_waste_per_cap-box}
 ggplot(data = plastic_waste, 
@@ -171,14 +178,21 @@ ggplot(data = plastic_waste,
   geom_boxplot()
 ```
 
-1.  Convert your side-by-side box plots from the previous task to [violin plots](http://ggplot2.tidyverse.org/reference/geom_violin.html). What do the violin plots reveal that box plots do not? What features are apparent in the box plots but not in the violin plots?
+1.  Convert your side-by-side box plots from the previous code chunk to [violin plots](http://ggplot2.tidyverse.org/reference/geom_violin.html). What do the violin plots reveal that box plots do not? What features are apparent in the box plots but not in the violin plots?
+
+Again, navigate your `lab-02.Rmd` starter file and complete the fourth exercise.
+
+🧶 ✅ ⬆️ *Now is a good time to knit your document and commit and push your changes to GitHub with an appropriate commit message.*
+
+--
 
 ```{marginfigure}
 **Remember:** We use `geom_point()` to make scatterplots.
 ```
 
-1.  Visualize the relationship between plastic waste per capita and mismanaged plastic waste per capita using a scatterplot.
-    Describe the relationship.
+1.  Visualize the relationship between plastic waste per capita and mismanaged plastic waste per capita using a scatterplot. Describe the relationship.
+
+Again, navigate your `lab-02.Rmd` starter file and complete the fifth, sixth, and seventh exercise.
 
 2.  Colour the points in the scatterplot by continent.
     Does there seem to be any clear distinctions between continents with respect to how plastic waste per capita and mismanaged plastic waste per capita are associated?
@@ -187,15 +201,13 @@ ggplot(data = plastic_waste,
     You will need to make two separate plots.
     Do either of these pairs of variables appear to be more strongly linearly associated?
 
-🧶 ✅ ⬆️ *Now is another good time to knit your document and commit and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
+🧶 ✅ ⬆️ *Now is another good time to knit your document and commit and push your changes to GitHub with an appropriate commit message.*
 
 # Wrapping up
 
-We don't expect you to complete all of the exercises within the hour reserved for the live workshop.
-Ideally, you should have got to this point.
-If you still have some time left, move on to the remaining exercises below.
-If not, you should find a time to meet with your team and complete them after the workshop.
-If you haven't had time to finish the exercises above, please ask for help before you leave!
+If you still have some time left, move on to the last exercise below.
+If not, complete them after class.
+If you haven't had time to finish the exercises above by end of class on Wednesday, please ask for help on Slack, or go to Joey's office hours!
 
 ```{marginfigure}
 **Hint:** The x-axis is a calculated variable. One country with plastic waste per capita over 3 kg/day has been filtered out. And the data are not only represented with points on the plot but also a smooth curve. The term "smooth" should help you [pick which geom to use](https://ggplot2.tidyverse.org/reference/index.html#section-geoms).
@@ -219,9 +231,10 @@ plastic_waste %>%
     theme_minimal()
 ```
 
-🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the md document on GitHub to make sure you're happy with the final state of your work.*
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the .Rmd document on GitHub to make sure you're happy with the final state of your work.*
 
 Once you're done, check to make sure your latest changes are on GitHub and that you have a green indicator for the automated check for your R Markdown document knitting.
+(Navigate to the GitHub repo folder that contains this Lab to check this.)
 
 ```{r echo=FALSE, eval=TRUE}
 knitr::include_graphics("img/repo-end.png")
