--- a/hw/hw-02-water-sanitation/hw-02-water-sanitation.Rmd
+++ b/hw/hw-02-water-sanitation/hw-02-water-sanitation.Rmd
@@ -29,15 +29,17 @@ Using a 2020 datset provided by [Our World in Data](https://ourworldindata.org/w
 
 # Getting started
 
-```{marginfigure}
-**IMPORTANT:** If there is no GitHub repo created for you for this assignment, it means I didn't have your GitHub username as of when I assigned the homework. Please let me know your GitHub username asap, and I can create your repo.
-```
+If you're looking at this RMarkdown document in RStudio, then you've already cloned your Unit 2 repo from Github.
+Good job!
 
-Go to the course GitHub organization and locate your homework repo, which should be named `hw-02-water-sanitation-YOUR_GITHUB_USERNAME`.
-Grab the URL of the repo, and clone it in RStudio.
-First, open the R Markdown document `hw-02.Rmd` and Knit it.
-Make sure it compiles without errors.
-The output will be in the file markdown `.md` file with the same name.
+As a brief reminder of the steps:
+
+-   Go to the course GitHub organization and look for your course materials repo, which should be named `unit-X-yourlastname`.
+-   Copy the URL of the repo using the green `Code` button, and copy/clone it into a `New Project from a GitHub Repo` in RStudio Cloud.
+-   Navigate to the exercise, lab, or homework folder using the `File Directory` pane.
+-   Open the R Markdown document `e/lab/hw.Rmd` and Knit it.
+-   Make sure it compiles without errors.
+-   The RMarkdown output will typically be in an `.html` file with the same name.
 
 ## Warm up
 
@@ -46,7 +48,7 @@ Before we introduce the data, let's warm up with some simple exercises.
 -   Update the YAML, changing the author name to your name, and **knit** the document.
 -   Commit your changes with a meaningful commit message.
 -   Push your changes to GitHub.
--   Go to your repo on GitHub and confirm that your changes are visible in your Rmd **and** md files. If anything is missing, commit and push again.
+-   Go to your repo on GitHub and confirm that your changes are visible in your Rmd file. If anything is missing, commit and push again.
 
 ## Packages and Data
 
@@ -81,10 +83,14 @@ More information on this water and sanitation dataset and sanitation access leve
 **Hint:** The Markdown Quick Reference sheet has an example of inline R code that might be helpful. You can access it from the Help menu in RStudio.
 ```
 
-1.  How many observations (rows) does the dataset have? Instead of hard coding the number in your answer, use inline code.
+1.  How many observations (rows) does the dataset have? Instead of hard coding the number in your answer, use inline code to add the answer within your narrative response. (Remember, using a single backtick followed by `r` you can create inline code)
 2.  Run `View(wat_san)` in your Console to view the data in the data viewer. What does each row in the dataset represent?
 
+Provide your exercise responses in the `hw-02.Rmd` starter file.
+
 🧶 ✅ ⬆️ *Knit,* *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
+
+--
 
 Each column represents a variable.
 We can get a list of the variables in the data frame using the `names()` function.
@@ -99,16 +105,21 @@ As the `?wat_san` function will not work (this dataset is not from an R package)
 -   `Year`: Year of estimate
 -   `water_`: Percent of population with a given level of water access
 -   `sanitation_`: Percent of population with a given level of water access
+
+The following variables are suffixes added to either `water_` or `sanitation_` to describe the service level available to people:
+
 -   `_improved`: Improved sanitation access (can be Safely Managed, Basic, or Limited)
 -   `_safe`: Best form of improved sanitation (e.g., private toilet)
 -   `_basic`: Intermediate form of improved sanitation (e.g., poorly maintained private toilet)
 -   `_limited`: Worst form of improved sanitation (e.g., shared toilet)
 -   `_unimproved`: Typically a poorly maintained pit latrine
--   `_none`: Open defecation (no sanitation)
+-   `_none`: No sanitation service (open defecation)
 
 3.  Create a faceted histogram where each facet represents a year and displays the distribution of the percent of population with no sanitation access. Does it look like rates of open defecation (no sanitation) have changed between 2000 and 2020? What features of the distributions have changed over time, if any?
 
-```{r}
+Copy the code chunk below into the `hw-02.Rmd` starter file and complete it.
+
+```{r no-sanitation-years, echo = F}
 ggplot(data = ___, mapping = aes(x = ___)) +
   geom_histogram(binwidth = ___) +
   facet_wrap(~___)
@@ -123,25 +134,64 @@ Let's de-construct this code:
 
 🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
-4.  Use a single pipeline to identity the countries with the highest rates of open defecation in the year 2000, and arrange these in descending order.
-    Compare the `water_none` and `sanitation_none` columns in the output.
-    Does it appear that water and sanitation infrastructure are well-correlated, or not?
+4.  Use a single code chunk pipeline (`data %>% filter by year %>% arrange in descending order by sanitation_none`) to identity the countries with the highest rates of "no sanitation service" in the year 2000, and arrange these in descending order. Compare the `water_none` and `sanitation_none` columns in the output. Does it appear that water and sanitation infrastructure are well-correlated, or not?
 
-5.  Then, in another pipeline, filter the entire dataset (all countries) for the year 2000 and use a scatter plot to visualize the relationship between `water_none` and `sanitation_none`.
+**Hint**: Remember the `slice_max()` function we used in the first week of class!
+If not, try `?slice_max()` to check what this function does and what the function **arguments** are.
+
+5.  Then, in another code chunk pipeline, filter the dataset for the year 2000 and use a scatter plot to visualize the relationship between `water_none` and `sanitation_none`.
     Does this relationship support your previous response about a correlation between the variables, and why?
 
-6.  In a third pipeline, identity the countries with the highest rates of open defecation in the year 2020, and arrange these in descending order.
+6.  In a third code chunk pipeline, identity the countries with the highest rates of "no sanitation service" in the year 2020, and arrange these in descending order.
     Have the countries changed between 2000 and 2020?
     If so, which have been added and which have been lost?
 
-7.  In a final pipeline, calculate the minimum, mean, median, standard deviation, IQR, and maximum rates of `water_none` and `sanitation_none` in the year 2000 and the year 2020 for the 5 countries with the highest amount of open defecation.
-    You'll need to use `group_by` and remember to filter out the `Entity` "World".
-    What do you notice about the values between 2000 and 2020?
-    What do you notice about the values for sanitation vs. water?
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
-8.  Create a final visualization that selects a few entities and that will help you understand why the five countries with the highest rates of open defecation changed between 2000 and 2020.
-    Include the entity "World" so that you can compare rates of change between individual countries and the world as a whole.
-    Explore the use of different `geom_` to best visualize these trends.
-    Comment on the rates of change in open defecation over time in some of the countries.
+--
 
-🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the md document on GitHub to make sure you're happy with the final state of your work.*
+The next two exercises are more challenging so we have provided you some code to get you started.
+Copy the code chunk into your `hw-02.Rmd` and try to complete it.
+And don't forget to add your clean text narrative providing your written answers too!
+
+7.  In a final pipeline, calculate the minimum, mean, median, standard deviation, IQR, and maximum rates of `water_none` and `sanitation_none` in the year 2000 and the year 2020 for the 5 countries with the highest amount of "no sanitation service". You'll need to use the function `group_by()` and remember to `filter()` out the `Entity` "World", to remove it. What do you notice about the values between 2000 and 2020? What do you notice about the values for sanitation vs. water?
+
+```{r progress-summary, echo = F}
+wat_san %>% 
+  filter(Year == ___ & Entity != "World" | Year == ___ & Entity != "World") %>% 
+  # this line uses a combination of logical operators (== (equal to), & (and), != (is not equal to), | (or))
+  # this combination filters for the two years provided, while excluding any data associated with the "World" Entity
+  group_by(Year) %>% 
+  # this line groups all the data by Year, so that any summary statistics specified below are computed for each group
+  summarize(water_none_min = min(water_none, na.rm = T),
+            water_none_mean = mean(___, na.rm = T),
+            water_none_median = ___(___, na.rm = T),
+            water_none_stdev = sd(___, na.rm = ___),
+            water_none_iqr = IQR(___, na.rm = ___),
+            water_none_max = ___(___, na.rm = ___),
+            
+            sanitation_none_min = min(sanitation_none, na.rm = T),
+            sanitation_none_mean = mean(sanitation_none, na.rm = T),
+            sanitation_none_median = ___(___, na.rm = T),
+            sanitation_none_stdev = sd(___, na.rm = ___),
+            sanitation_none_iqr = IQR(___, na.rm = ___),
+            sanitation_none_max = ___(___, na.rm = ___)
+
+            )
+  
+```
+
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
+
+8.  Create a final **time series** visualization that will help you understand why the five countries () with the highest rates of "no sanitation" changed between 2000 and 2020. Include the entity "World" so that you can compare rates of change between individual countries and the world as a whole. Map the `Entity` variable to an aesthetic so that individual countries can be distinguished. Explore the use of different `geom_` to best visualize these trends. Comment on the rates of change in "no sanitation service" over time in some of the countries.
+
+**Note**: A time-series visualization is a plot that shows how a variable is changing over time (in our case, over multiple years/rows/observations in the dataset).
+
+```{r country-global-changes, echo = F}
+wat_san %>% 
+  filter(Entity == "World" | Entity == "India" | Entity == "___" | Entity == "___" | Entity == "___") %>% 
+  ggplot(aes(x = ___, y = ___, color = ___)) +
+  geom_line()
+```
+
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the Rmd document on GitHub to make sure you're happy with the final state of your work.*
